clusters/main/kubernetes/system/networkpolicies/app/vscode-allow-egress-registry.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-registry
  namespace: vscode
spec:
  podSelector: {}
  policyTypes: [Egress]
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: registry
          podSelector:
            matchLabels:
              app: docker-registry
      ports:
        - protocol: TCP
          port: 5000
